--- a/jenkinsfile
+++ b/jenkinsfile
@@ -6,11 +6,14 @@ pipeline {
 
 	stage ('build'){
 
+	   steps {
 		sh 'ant -f build.xml -v'
 
-        }
+                 }
 
-  }
+             }
+
+         }      
 
 
-}
+     } 
